--- a/hellow.html
+++ b/hellow.html
@@ -4,7 +4,7 @@
 
 <h1>HELLO WORLD</h1>
 <p>Hi</p>
-<img src="lumiq_logo.jpg" alt="logo of LUMIQ">
+<img src="hackerman.jpg" alt="hxxked" width="300" height="600">
 
 </body>
 </html>
