added the logo image with attributes

--- a/hellow.html
+++ b/hellow.html
@@ -4,7 +4,7 @@
 
 <h1>HELLO WORLD</h1>
 <p>Hi</p>
-<img src="lumiq_logo.jpg" alt="logo of LUMIQ">
+<img src="lumiq_logo.png" alt="logo of LUMIQ" width="400" height="400">
 
 </body>
 </html>
