--- a/hellow.html
+++ b/hellow.html
@@ -5,6 +5,8 @@
 <h1>HELLO WORLD</h1>
 <p>Hi</p>
 <img src="hackerman.jpg" alt="hxxked" width="300" height="600">
-
+// changes made by akshit
+<p>Ashish is my former roommate.</p>
+<p>Either you run the day or the day runs you.</p>
 </body>
 </html>
